# CLIP_Pretraining

./: README.md  pyproject.toml
scripts/: dataset_preparation.py  pretraining.py
scripts/dataset_preparation_configuration/: default_config.yaml
scripts/pretraining_configuration/: default_config.yaml
scripts/pretraining_configuration/checkpointing/: default_checkpointing.yaml
scripts/pretraining_configuration/dataset/: default_dataset.yaml
scripts/pretraining_configuration/logging/: default_logging.yaml
scripts/pretraining_configuration/model/: default_model.yaml
scripts/pretraining_configuration/optimizer/: adam_optimizer.yaml  adamw_optimizer.yaml
scripts/pretraining_configuration/save_dir/: default_save.yaml
scripts/pretraining_configuration/scheduler/: cosine_lr.yaml  none.yaml  steplr.yaml
scripts/pretraining_configuration/trainer/: default_trainer.yaml
src/openthaigpt_model_test/: constants.py  data_preprocessing.py  pl_trainer.py
